Update exclude node_modules in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
           localDir: '.'  
           remoteDir: '/' 
           dryRun: false
-          exclude: '.git*,.github*,node_modules'
+          exclude: 'node_modules/**/*,.git*,.github*'
